--- a/newsreader/Base.lproj/Main.storyboard
+++ b/newsreader/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--FirstViewController-->
+        <!--TableViewController-->
         <scene sceneID="W8X-0g-H0o">
             <objects>
-                <tableViewController title="FirstViewController" hidesBottomBarWhenPushed="YES" id="MZn-e7-2Ii" customClass="TableViewController" customModule="newsreader" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="TableViewController" hidesBottomBarWhenPushed="YES" id="MZn-e7-2Ii" customClass="TableViewController" customModule="newsreader" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" id="loX-CT-Cz7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,7 +23,7 @@
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YS2-Oz-Ys8" id="cap-ed-ens">
-                                    <rect key="frame" x="0.0" y="0.0" width="381" height="89.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="381" height="89"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I8e-je-jA3">
@@ -75,8 +75,21 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Featured" id="fM7-sv-l9C"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="kZr-Jn-ddH">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <attributedString key="attributedTitle">
+                            <fragment content="Pull to refresh">
+                                <attributes>
+                                    <font key="NSFont" metaFont="smallSystem"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="0.76145119859999999" colorSpace="custom" customColorSpace="sRGB"/>
+                    </refreshControl>
                     <connections>
                         <outlet property="tableView" destination="loX-CT-Cz7" id="rcU-P7-Crl"/>
+                        <outlet property="view" destination="loX-CT-Cz7" id="PPq-Qi-zNW"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5TA-4E-o8i" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -234,11 +247,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EbA-Os-H2i">
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="EbA-Os-H2i">
                                 <rect key="frame" x="20" y="72" width="374" height="328"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="5gB-jV-sCj">
-                                <rect key="frame" x="18" y="414.66666666666669" width="378" height="31"/>
+                                <rect key="frame" x="18" y="415" width="378" height="31"/>
                                 <connections>
                                     <action selector="sliderDragged:" destination="8rJ-Kc-sve" eventType="touchDragInside" id="miU-qU-gDl"/>
                                 </connections>
@@ -251,19 +264,19 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nothing to play yet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aE-8H-eVt">
-                                <rect key="frame" x="134.66666666666669" y="567.66666666666663" width="145.00000000000006" height="21"/>
+                                <rect key="frame" x="135" y="568" width="145" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZdW-qY-mXh">
-                                <rect key="frame" x="38.666666666666671" y="460.66666666666669" width="35.666666666666671" height="21"/>
+                                <rect key="frame" x="39" y="461" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--:--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lbg-lE-4i8">
-                                <rect key="frame" x="339.66666666666669" y="460.66666666666669" width="36" height="21"/>
+                                <rect key="frame" x="340" y="461" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -360,4 +373,7 @@
             <point key="canvasLocation" x="776.79999999999995" y="-292.80359820089956"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder.png" width="420" height="420"/>
+    </resources>
 </document>
